# LoRA-Dataset-Forge

./: .gitignore  LoRA Dataset Forge Requirements Review Addendum.md  LoRA_workflow.md  README.md  pyproject.toml
.kiro/specs/lora-dataset-forge/: .config.kiro  design.md  requirements.md  tasks.md
src/lora_forge/: __init__.py  acceptance.py  cli.py  config.py  dedupe.py  doctor.py  exif.py  importer.py  linting.py  metadata.py  project.py  quality.py  renamer.py  reporting.py  scanner.py  state.py  status.py  utils.py  working.py
src/lora_forge/captioning/: __init__.py  openai_captioner.py  prompts.py
src/lora_forge/exporter/: __init__.py  base.py  kohya.py  onetrainer.py
tests/: test_captioning_linting.py  test_config.py  test_dedupe.py  test_export_reporting.py  test_importer.py  test_project.py  test_quality_acceptance.py  test_scanner.py  test_state.py  test_status_doctor.py  test_working.py
